--- a/GH_Algorithm_1.ipynb
+++ b/GH_Algorithm_1.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,14 +96,13 @@
       "text/plain": "[2, 3, 5, 7, 23, 37, 53, 73, 373]"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 5
     }
    ],
    "source": [
     "#해당 수가 체인 소수인지 판단\n",
     "def is_chain_prime(num) :\n",
-    "    abs_num = abs(num)\n",
-    "    for i in slice_num(abs_num) :\n",
+    "    for i in slice_num(num) :\n",
     "        if not is_prime(i) :\n",
     "            return False\n",
     "    return True\n",
