--- a/GH_Data_1_2_pre1.ipynb
+++ b/GH_Data_1_2_pre1.ipynb
@@ -23,16 +23,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
    "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Rating   Reviews  Installs   NPriceD    NSizeM\nRating    1.000000  0.058658  0.035402 -0.033268  0.045972\nReviews   0.058658  1.000000  0.741567 -0.017392  0.085281\nInstalls  0.035402  0.741567  1.000000 -0.024050  0.066331\nNPriceD  -0.033268 -0.017392 -0.024050  1.000000 -0.013826\nNSizeM    0.045972  0.085281  0.066331 -0.013826  1.000000\n"
-    },
     {
      "output_type": "execute_result",
      "data": {
@@ -40,7 +35,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>App Name</th>\n      <th>Category</th>\n      <th>Rating</th>\n      <th>Reviews</th>\n      <th>Installs</th>\n      <th>Size</th>\n      <th>Price</th>\n      <th>NPriceD</th>\n      <th>NSizeM</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>123 Kids Fun MUSIC - Kids Music Educational Games</td>\n      <td>GAME_MUSIC</td>\n      <td>4.083333</td>\n      <td>36</td>\n      <td>1000</td>\n      <td>22M</td>\n      <td>$1.99</td>\n      <td>1.99</td>\n      <td>22.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>LetterSchool - Block Letters</td>\n      <td>GAME_EDUCATIONAL</td>\n      <td>4.181092</td>\n      <td>751</td>\n      <td>10000</td>\n      <td>79M</td>\n      <td>$6.99</td>\n      <td>6.99</td>\n      <td>79.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tynker for Schools</td>\n      <td>GAME_EDUCATIONAL</td>\n      <td>4.000000</td>\n      <td>33</td>\n      <td>1000</td>\n      <td>33M</td>\n      <td>$4.99</td>\n      <td>4.99</td>\n      <td>33.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Fuzzy Numbers: Pre-K Number Foundation</td>\n      <td>EDUCATION</td>\n      <td>4.500000</td>\n      <td>22</td>\n      <td>1000</td>\n      <td>44M</td>\n      <td>$5.99</td>\n      <td>5.99</td>\n      <td>44.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Toddler Sing and Play 2 Pro</td>\n      <td>GAME_MUSIC</td>\n      <td>4.065041</td>\n      <td>246</td>\n      <td>10000</td>\n      <td>20M</td>\n      <td>$1.99</td>\n      <td>1.99</td>\n      <td>20.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 3
     }
    ],
    "source": [
@@ -48,14 +43,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "#자료 불러오기\n",
     "app_store_df = pd.read_csv(\"./app_store.csv\")\n",
+    "\n",
+    "#자료 중 Price, Size, Installs를 숫자 형태로 변환\n",
     "app_store_df['NPriceD'] = app_store_df.Price.map(lambda x : float(x[1:]))\n",
     "app_store_df['NSizeM'] = app_store_df.Size.map(lambda x : float(x.rstrip('M').replace(',','')) if(x[-1] == 'M') else float(x.rstrip('k').replace(',',''))/1000)\n",
     "app_store_df['Installs'] = app_store_df.Installs.map(lambda x : int(x.rstrip('+').replace(',','')))\n",
-    "print(app_store_df.corr())\n",
     "\n",
-    "\n",
-    "\n",
+    "#자료 앞부분 출력\n",
     "app_store_df.head()"
    ]
   },
@@ -73,16 +69,19 @@
     }
    ],
    "source": [
+    "#Selenium 라이브러리를 활용하여 플레이스토어 크롤링 환경 구성\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys  \n",
     "from selenium.webdriver.chrome.options import Options \n",
     "import time\n",
     "start_time = time.time()\n",
     "\n",
+    "#headless Chrome Canary를 이용하여 크롤링\n",
     "chrome_options = Options()  \n",
     "chrome_options.add_argument(\"--headless\")  \n",
     "chrome_options.binary_location = '/Applications/Google Chrome Canary.app/Contents/MacOS/Google Chrome Canary'\n",
     "\n",
+    "#웹사이트 접속 테스트\n",
     "driver = webdriver.Chrome(executable_path=os.path.abspath(\"chromedriver\"),   chrome_options=chrome_options)  \n",
     "driver.get('https://play.google.com/store/apps/details?id=com.snkplaymore.android001')\n",
     "rating_element = driver.find_element_by_class_name('VEF2C').get_attribute('innerHTML')\n",
@@ -113,16 +112,20 @@
     "import time\n",
     "start_time = time.time()\n",
     "\n",
+    "#플레이스토어에 이름을 검색한 뒤 상위 5개 항목에 이름과 일치하는 항목이 있을 경우 존재한다고 판단하고 이후 크롤링을 위해 package name 저장\n",
+    "#아닐 경우 존재하지 않는다고 판단하고 데이터에서 제거 \n",
     "package_names = pd.Series()\n",
     "for i in list(range(len(app_store_df['App Name']))):\n",
     "    driver.get('https://play.google.com/store/search?q='+app_store_df['App Name'][i]+'&c=apps')\n",
-    "    for  j in [0,1,2,3,4,5]:\n",
+    "    for  j in [0,1,2,3,4,5]:        #상위 5개 항목 확인\n",
     "        try:\n",
+    "            #app name 저장 indicator - WsMG1c nnK0zc 클래스\n",
     "            app_name = driver.find_elements_by_css_selector(\".WsMG1c.nnK0zc\")[j].get_attribute('innerHTML')\n",
-    "            print(app_name)\n",
+    "            print(app_name) #어플 이름 검색 결과 로그\n",
     "            if (app_store_df['App Name'][i] == app_name):\n",
-    "                search_div = driver.find_elements_by_css_selector(\".vU6FJ.p63iDd a\")[0].get_attribute('href')\n",
-    "                print(search_div)\n",
+    "                #package name 저장 indicator - vU6FJ p63iDd 클래스의 a 태그\n",
+    "                search_div = driver.find_elements_by_css_selector(\".vU6FJ.p63iDd a\")[0].get_attribute('href')   \n",
+    "                print(search_div) #package name이 포함되어있는 해당 어플의 url 로그\n",
     "                package_name = search_div[46:]\n",
     "                package_names.at[i] = package_name\n",
     "                break\n",
@@ -133,7 +136,7 @@
     "print(package_names)\n",
     "    \n",
     "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "print(\"--- %s seconds ---\" % (time.time() - start_time)) #오래 걸리는 작업이므로 시간 로그"
    ]
   },
   {
@@ -166,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#도수분포의 표준편차 구하는 함수 작성\n",
+    "#Rating 도수분포의 표준편차 구하는 함수 작성\n",
     "def std_rating(ratings):\n",
     "    list_to_std = []\n",
     "    for i in list(range(5)):\n",
@@ -191,7 +194,7 @@
     }
    ],
    "source": [
-    "#각 어플 Rating의 표준편차 구하기\n",
+    "#각 어플 Rating의 표준편차 구하기 - Play Store 어플 웹페이지 내에 있는 바 차트 활용\n",
     "stds_rating = pd.Series()\n",
     "for i in list(range(len(app_store_df))):\n",
     "    try:\n",
@@ -227,8 +230,10 @@
     }
    ],
    "source": [
+    "#app_store_df에 표준편차 column 추가 후 파일로 저장 및 확인출력\n",
     "app_store_df['stds_rating'] = stds_rating\n",
-    "app_store_df\n"
+    "app_store_df.to_csv('app_store_modified_2.csv')\n",
+    "app_store_df"
    ]
   },
   {
